--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "web-vitals": "^1.1.2",
+    "engines":{
+      "node": ">=15.0.0",
+      "npm: ">=5.0.0"}
   },
   "scripts": {
     "start": "react-scripts start",
