--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "web-vitals": "^1.1.2",
     "engines":{
       "node": ">=15.0.0",
-      "npm: ">=5.0.0"}
+      "npm": ">=5.0.0"}
   },
   "scripts": {
     "start": "react-scripts start",
