--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
+    "protobufjs": "^6.11.2",
     "engines":{
-      "node": ">=15.0.0",
-      "npm": ">=5.0.0"}
+      "node": ">=14.0.0",
+      "npm": ">=6.0.0"}
   },
   "scripts": {
     "start": "react-scripts start",
